--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^6.6.0",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.8",
+    "date-fns": "^4.1.0",
     "echarts-for-react": "^3.0.2",
     "framer-motion": "^12.4.11",
     "jose": "^6.0.10",
@@ -45,6 +46,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.10",
