--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "seed": "node prisma/seed.js"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -31,7 +32,7 @@
     "lucide-react": "^0.487.0",
     "moment": "^2.30.1",
     "next": "^15.2.1",
-    "nodemailer": "^6.10.0",
+    "nodemailer": "^6.10.1",
     "react": "^18.3.1",
     "react-big-calendar": "^1.17.1",
     "react-calendar": "^5.1.0",
@@ -42,6 +43,7 @@
     "react-tagcloud": "^2.3.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
+    "resend": "^4.5.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
